<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_other_zan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_setting_selector"
        android:minHeight="60dip" >

        <ImageView
            android:id="@+id/iv_other_setting_zan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/other_setting_item_marginleft"
            android:background="@drawable/zan_ge" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_other_setting_zan"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_zan_ge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/five_star"
                android:textColor="@color/white_text_color"
                android:textSize="@dimen/item_name_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zan_ge"
                android:textColor="@color/white_text_color" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <TextView
        android:id="@+id/tv_share"
        style="@style/other_setting_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_setting_selector"
        android:drawableLeft="@drawable/share"
        android:text="@string/share_to_friend" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <TextView
        android:id="@+id/tv_short_cut"
        style="@style/other_setting_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_setting_selector"
        android:drawableLeft="@drawable/short_cut"
        android:text="@string/create_short_cut" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <TextView
        android:id="@+id/tv_feel_back"
        style="@style/other_setting_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_setting_selector"
        android:drawableLeft="@drawable/feel_back"
        android:text="@string/feel_back" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <TextView
        android:id="@+id/tv_check_update"
        style="@style/other_setting_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_setting_selector"
        android:drawableLeft="@drawable/check_update"
        android:text="@string/check_update" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <TextView
        android:id="@+id/tv_about_us"
        style="@style/other_setting_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_setting_selector"
        android:drawableLeft="@drawable/about_us"
        android:text="@string/about_us" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <TextView
        android:id="@+id/tv_help"
        style="@style/other_setting_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:background="@drawable/other_setting_selector"
        android:drawableLeft="@drawable/help"
        android:text="@string/help" />

</LinearLayout>