<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_notice_setting_checked"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_title_text_marginleft"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_notice_setting_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textColor="@color/white_text_color"
                android:textSize="@dimen/item_name_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice_lighting_discribe"
                android:textColor="@color/grid_text_color"
                android:textSize="@dimen/item_dicribe_text_size" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_notice_setting_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/app_checkbox_selector"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <RelativeLayout
        android:id="@+id/layout_notice_setting_rate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_title_text_marginleft"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lighting_rate"
                android:textColor="@color/white_text_color"
                android:textSize="@dimen/item_name_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lighting_rate_discribe"
                android:textColor="@color/grid_text_color"
                android:textSize="@dimen/item_dicribe_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_notice_setting_rate"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rate_time"
            android:singleLine="true"
            android:text="@string/_500ms"
            android:textColor="@color/green_divider_color" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <RelativeLayout
        android:id="@+id/layout_notice_setting_times"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:id="@+id/tv_notice_setting_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sub_title_text_marginleft"
            android:text="@string/lighting_times"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/item_name_text_size" />

        <Button
            android:id="@+id/btn_notice_setting_times"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rate_time"
            android:singleLine="true"
            android:text="@string/_5_times"
            android:textColor="@color/green_divider_color" />
    </RelativeLayout>

</LinearLayout>