<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_lighting_mode_setting_checked"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sub_title_text_marginleft"
            android:text="@string/lighting_anytime"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/item_name_text_size" />

        <CheckBox
            android:id="@+id/cb_lighting_mode_setting_anytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/app_checkbox_selector"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <RelativeLayout
        android:id="@+id/layout_lighting_mode_setting_shake"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sub_title_text_marginleft"
            android:text="@string/shake_mode_only"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/item_name_text_size" />

        <CheckBox
            android:id="@+id/cb_lighting_mode_setting_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/app_checkbox_selector" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grid_divider_color" />

    <RelativeLayout
        android:id="@+id/layout_lighting_mode_setting_ring"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sub_title_text_marginleft"
            android:text="@string/ring_mode_only"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/item_name_text_size" />

        <CheckBox
            android:id="@+id/cb_lighting_mode_setting_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/app_checkbox_selector" />
    </RelativeLayout>

</LinearLayout>